# picast

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/picast/: __main__.py  api.py  app.py  config.py  image.py  keys.py  player.py  store.py
src/picast/ui/: panels.py  renderer.py  theme.py
