[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picast"
version = "0.1.0"
description = "Terminal podcast player powered by PodcastIndex"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "httpx>=0.27",
    "term-image>=0.7",
    "pillow>=10.0",
]

[project.scripts]
picast = "picast.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/picast"]

[dependency-groups]
dev = ["ruff>=0.4"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
